--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>YouTube Video Original Quality Download</title>
 
 
+    <style>
+:root {
+    --primary: #00eaff;
+    --secondary: #7c7cff;
+    --bg-dark: #05050a;
+    --glass: rgba(255,255,255,0.08);
+    --border: rgba(255,255,255,0.15);
+}
+    </style>
+
+    
     
 </head>
 <body>
