--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     --glass: rgba(255,255,255,0.08);
     --border: rgba(255,255,255,0.15);
 }
+
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
     </style>
 
     
