--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     box-sizing: border-box;
 }
 
+        body {
+    font-family: 'Inter', 'Segoe UI', sans-serif;
+    background:
+        radial-gradient(circle at top, #10102a, #05050a 70%);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+        
     </style>
 
     
