--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
     color: #fff;
 }
 
+        .container {
+    width: 92%;
+    max-width: 640px;
+    padding: 40px;
+    border-radius: 24px;
+    background: linear-gradient(
+        145deg,
+        rgba(255,255,255,0.10),
+        rgba(255,255,255,0.02)
+    );
+    backdrop-filter: blur(18px);
+    border: 1px solid var(--border);
+    box-shadow:
+        0 0 40px rgba(0,234,255,0.12),
+        inset 0 0 20px rgba(255,255,255,0.05);
+}
         
     </style>
 
