--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@ h1 {
 }
 
 
+        .subtitle {
+    font-size: 0.95rem;
+    color: #b5c7ff;
+    margin-bottom: 28px;
+}
+
+.input-group {
+    position: relative;
+    margin-bottom: 25px;
+}
+
+.url-input {
+    width: 100%;
+    padding: 16px 55px 16px 18px;
+    font-size: 15px;
+    border-radius: 14px;
+    background: rgba(0,0,0,0.6);
+    border: 1px solid var(--border);
+    color: #fff;
+    outline: none;
+    transition: 0.3s;
+}
+
+
+
         
 
         
