Add styling for paste button in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,20 @@ h1 {
 }
 
 
-
+.paste-btn {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: linear-gradient(135deg, var(--primary), var(--secondary));
+    color: #000;
+    padding: 8px 14px;
+    border-radius: 10px;
+    font-size: 12px;
+    cursor: pointer;
+    font-weight: 600;
+}
 
         
         
