Add quality-options class to hide element
Add quality-options class with display none style

--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@ h1 {
     font-weight: 600;
     margin-bottom: 6px;
 }
-
+.quality-options {
+    display: none;
+    margin-top: 25px;
+}
 
         
         
